update CORS Config